app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require switchery
 *= require_tree .
 *= require_self
 */

body, html {
  font-family: 'Roboto' !important;
  background: #f5f5f5;
  overflow-y: scroll;
  h1, h2, h3, h4, h5, h6, p, a {
   font-family: 'Roboto' !important;
  }
}

@import "font-awesome-sprockets";
@import "font-awesome";

@font-face {
  font-family: 'Material-Design-Iconic-Font';
  src: asset-url('Material-Design-Iconic-Font.woff');
  src: asset-url('Material-Design-Iconic-Font.eot?#iefix') format('embedded-opentype'),
    asset-url('Material-Design-Iconic-Font.svg#Material-Design-Iconic-Font') format('svg'),
    asset-url('Material-Design-Iconic-Font.woff') format('woff'),
    asset-url('Material-Design-Iconic-Font.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'fontawesome-webfont';
  src: asset-url('fontawesome-webfont.woff');
  src: asset-url('fontawesome-webfont.eot?#iefix') format('embedded-opentype'),
    asset-url('fontawesome-webfont.svg#fontawesome-webfont') format('svg'),
    asset-url('fontawesome-webfont.woff') format('woff'),
    asset-url('fontawesome-webfont.woff2') format('woff'),
    asset-url('fontawesome-webfont.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'ionicons';
  src: asset-url('ionicons.woff');
  src: asset-url('ionicons.eot?#iefix') format('embedded-opentype'),
    asset-url('ionicons.svg#ionicons') format('svg'),
    asset-url('ionicons.woff') format('woff'),
    asset-url('ionicons.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'themify';
  src: asset-url('themify.woff');
  src: asset-url('themify.eot?#iefix') format('embedded-opentype'),
    asset-url('themify.svg#themify') format('svg'),
    asset-url('themify.woff') format('woff'),
    asset-url('themify.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'weathericons-regular-webfont';
  src: asset-url('weathericons-regular-webfont.woff');
  src: asset-url('weathericons-regular-webfont.eot?#iefix') format('embedded-opentype'),
    asset-url('weathericons-regular-webfont.svg#weathericons-regular-webfont') format('svg'),
    asset-url('weathericons-regular-webfont.woff') format('woff'),
    asset-url('weathericons-regular-webfont.woff2') format('woff'),
    asset-url('weathericons-regular-webfont.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}

